--- a/ResortAppication/appsettings.json
+++ b/ResortAppication/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection" :"Data Source=SQL1003.site4now.net;User = db_aba1de_resortapplication_admin;Password = Ronaldo12@ ;Initial Catalog=db_aba1de_resortapplication"
-    "DefaultConnection": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba1de_resortapplication;User Id=db_aba1de_resortapplication_admin;Password=Ronlado12@"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;User Id= anupam_user;Password = name1 ;Initial Catalog=VILLADB;Encrypt=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba1de_resortapplication;User Id=db_aba1de_resortapplication_admin;Password=Ronlado12@"
 
 
   },
